@@ -6,6 +6,8 @@ requires 'Dist::Zilla::Plugin::Git::Tag';
 requires 'Dist::Zilla::Plugin::Git::Push';
 requires 'Dist::Zilla::Plugin::Git::GatherDir';
 requires 'Dist::Zilla::Plugin::GithubMeta';
+requires 'Dist::Zilla::Plugin::Git::Contributors';
+requires 'Dist::Zilla::Plugin::MetaNoIndex';
 requires 'Dist::Zilla::Plugin::ReadmeAnyFromPod';
 requires 'Dist::Zilla::Plugin::MetaProvides::Package';
 requires 'Dist::Zilla::Plugin::RewriteVersion';
@@ -20,7 +22,6 @@ requires 'Dist::Zilla::Plugin::ManifestSkip';
 requires 'Dist::Zilla::Plugin::MetaYAML';
 requires 'Dist::Zilla::Plugin::MetaJSON';
 requires 'Dist::Zilla::Plugin::License';
-requires 'Dist::Zilla::Plugin::Readme';
 requires 'Dist::Zilla::Plugin::ExtraTests';
 requires 'Dist::Zilla::Plugin::ExecDir';
 requires 'Dist::Zilla::Plugin::ShareDir';
